
// ------------------- Admin -------------------
model Admin {
  admin_id  Int      @id @default(autoincrement())
  name      String
  username  String   @unique
  password  String
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt
}