model FeedBack {
  feedback_id Int      @id @default(autoincrement())
  user_id     String
  store_id    String
  text        String
  created_at   DateTime @default(now())
  updated_at   DateTime @updatedAt

  store         Store          @relation(fields: [store_id], references: [store_id], onDelete: Cascade)
  user          User           @relation(fields: [user_id], references: [user_id], onDelete: Cascade)
  FeedBackReply FeedBackReply?
}

model FeedBackReply {
  feedback_id Int      @id
  reply       String
  created_at   DateTime @default(now())
  updated_at   DateTime @updatedAt

  feedback FeedBack @relation(fields: [feedback_id], references: [feedback_id], onDelete: Cascade)
}
