model User {
  user_id    String    @id @unique
  first_name String
  last_name  String
  email      String?   @unique
  phone      String?   @unique
  active     Boolean   @default(false)
  last_login DateTime?
  created_at  DateTime  @default(now())
  updated_at  DateTime  @updatedAt

  FeedBacks       FeedBack[]
  UserPoints      UserPoint[]
  favoriteCoupons Coupon[]     @relation("FavoriteCoupons")
  FavoriteStores  Store[]      @relation("FavoriteStore")
  coupons         CouponUser[]
  friends         User[]       @relation("Friendship")
  friendOf        User[]       @relation("Friendship")
  PointHistory    PointHistory[]
  Notifications   UserNotification[]
  Stores          Customer[]
  Groups          CustomerGroup[] @relation("GroupCustomer")
  Visits          Visit[]
}